# RuOt

./: .gitignore  Cargo.toml  DIR_STRUCTURE.md  Makefile.toml  README.md  prompt.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  osv-scanner-pr.yml  osv-scanner-scheduled.yml  osv-scanner.yml  rust-clippy.yml  rust.yml  trivy.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/crates/ruot_gameserver/.cargo/: config.toml
backend/crates/ruot_gameserver/src/: main‎.rs
backend/crates/ruot_shared/: Cargo.toml
crates/ruot_gameserver/: Cargo.toml
crates/ruot_gameserver/.cargo/: config.toml
crates/ruot_shared/: Cargo.toml
docker/data/: env.haproxy.dist  haproxy-auxiliars.cfg.template  haproxy-main.cfg.template
docs/: DIR_STRUCTURE.md  RUOT_DECISIONS.md
scripts/: Cargo.toml
scripts/.cargo/: config.toml
wasm_scripts/: Cargo.toml
